完成墨水屏驱动

--- a/components/control_driver/CMakeLists.txt
+++ b/components/control_driver/CMakeLists.txt
@@ -1,4 +1,6 @@
 idf_component_register(SRCS "control_driver.c" "../../main/global_message/global_message.c"
                     INCLUDE_DIRS "include" "../../main/global_message"
                     REQUIRES driver
-                    REQUIRES http)
+                    REQUIRES http
+                    REQUIRES lvgl
+                    REQUIRES ui)
