--- a/components/network/CMakeLists.txt
+++ b/components/network/CMakeLists.txt
@@ -2,4 +2,6 @@ idf_component_register(SRCS "network.c"
                     INCLUDE_DIRS "include"
                     REQUIRES spi_flash
                     REQUIRES nvs_flash
-                    REQUIRES bt)
+                    REQUIRES bt
+                    REQUIRES lvgl
+                    REQUIRES ui)
