--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.5)
-# set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/network)
-# set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/http)
-# set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/ota)
-# set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/m_mqtt)
-# set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/m_esp_now)
-# set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/control_driver)
+set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/ui)
+set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/lvgl_esp32_drivers)
+set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/network)
+set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/http)
+set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/ota)
+set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/m_mqtt)
+set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/m_esp_now)
+set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/control_driver)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(E_lable)
