--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/ui)
 set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/lvgl_esp32_drivers)
 set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/network)
-set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/http)
+set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/m_http)
 set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/ota)
 set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/m_mqtt)
 set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/m_esp_now)
