--- a/components/control_driver/CMakeLists.txt
+++ b/components/control_driver/CMakeLists.txt
@@ -1,6 +1,4 @@
-idf_component_register(SRCS "control_driver.c" "../../main/global_message/global_message.c" "ws2812_control.c" "led_strip_rmt_ws2812.c"
-                    INCLUDE_DIRS "include" "../../main/global_message" 
-                    REQUIRES driver
-                    REQUIRES http
-                    REQUIRES lvgl
-                    REQUIRES ui)
+idf_component_register(SRCS "control_driver.cpp" "ws2812_control.c" "led_strip_rmt_ws2812.c" "buzzer.cpp" "LED.cpp"
+                    INCLUDE_DIRS "include" 
+                    REQUIRES driver)
+target_compile_options(${COMPONENT_LIB} PRIVATE -std=gnu++17)
