--- a/components/m_esp_now/CMakeLists.txt
+++ b/components/m_esp_now/CMakeLists.txt
@@ -1,8 +1,8 @@
-idf_component_register(SRCS "m_esp_now.c"  "../network/network.c" "../../main/global_message/global_message.c"
-                        INCLUDE_DIRS "include"  "../network/include" "../../main/global_message"
-                        PRIV_REQUIRES network
-                        PRIV_REQUIRES http
-                        REQUIRES lvgl
-                        REQUIRES ui
-                        )
-                        # 写法问题，globalmessage和http连接的太深了
+# idf_component_register(SRCS "m_esp_now.c"  "../network/network.c" "../../main/global_message/global_message.c"
+#                         INCLUDE_DIRS "include"  "../network/include" "../../main/global_message"
+#                         PRIV_REQUIRES network
+#                         PRIV_REQUIRES http
+#                         REQUIRES lvgl
+#                         REQUIRES ui
+#                         )
+#                         # 写法问题，globalmessage和http连接的太深了
