--- a/components/network/CMakeLists.txt
+++ b/components/network/CMakeLists.txt
@@ -1,7 +1,5 @@
-idf_component_register(SRCS "network.c"
-                    INCLUDE_DIRS "include"
+idf_component_register(SRCS "network.c" 
+                    INCLUDE_DIRS "include" "../../main/global_message"
                     REQUIRES spi_flash
                     REQUIRES nvs_flash
-                    REQUIRES bt
-                    REQUIRES lvgl
-                    REQUIRES ui)
+                    REQUIRES bt)
