--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,18 +1,20 @@
-idf_component_register(SRCS "main.cpp" "global_message/global_message.c"  
+idf_component_register(SRCS "main.cpp" "global_message/global_message.c"  "global_message/global_time.c"  "global_message/global_draw.c"  
                         "elabel_state_machine/ElabelController.cpp"
                         "elabel_state_machine/ChoosingTaskState.cpp"
                         "elabel_state_machine/OperatingTaskState.cpp"
                         "elabel_state_machine/FocusTaskState.cpp"
                         "elabel_state_machine/NoWifiState.cpp"
                         "elabel_state_machine/InitState.cpp"
-                    INCLUDE_DIRS "global_message" "elabel_state_machine" "." 
+                        "elabel_state_machine/OTAState.cpp"
+                        "battery_manager/battery_manager.cpp"
+                    INCLUDE_DIRS "global_message" "elabel_state_machine" "battery_manager" "." 
+                    REQUIRES esp_adc_cal
                     REQUIRES lvgl
-                    REQUIRES ui
-                    REQUIRES http
                     REQUIRES control_driver
-                    REQUIRES m_esp_now
+                    REQUIRES lvgl_esp32_drivers
+                    REQUIRES m_http
                     REQUIRES m_mqtt
                     REQUIRES network
                     REQUIRES ota
-                    REQUIRES lvgl_esp32_drivers
+                    REQUIRES ui
                     )
