--- a/components/m_mqtt/CMakeLists.txt
+++ b/components/m_mqtt/CMakeLists.txt
@@ -1,7 +1,4 @@
-idf_component_register(SRCS "m_mqtt.c" "../http/cJSON.c" "../../main/global_message/global_message.c"
-                        INCLUDE_DIRS "include" "../../main/global_message" "../http/include"
+idf_component_register(SRCS "m_mqtt.c" "../../main/cJSON/cJSON.c" "../../main/global_message/global_message.c" 
+                        INCLUDE_DIRS "include" "../../main/global_message" "../../main/cJSON" "../m_http/include"
                         REQUIRES mqtt
-                        PRIV_REQUIRES http
-                        REQUIRES lvgl
-                        REQUIRES ui)
-                        #这里需要加这一句因为导入了http.h
+                        REQUIRES m_http)
