--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,6 @@ set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/ota)
 set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/m_mqtt)
 set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/m_esp_now)
 set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/control_driver)
+set(EXTRA_COMPONENT_DIRS ${EXTRA_COMPONENT_DIRS} components/m_esp_now)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(E_lable)
