--- a/components/ui/CMakeLists.txt
+++ b/components/ui/CMakeLists.txt
@@ -1,14 +1,16 @@
 idf_component_register(SRCS screens/ui_HalfmindScreen.c
-    screens/ui_BindScreen.c
+    screens/ui_ActiveScreen.c
     screens/ui_OTAScreen.c
     screens/ui_TaskScreen.c
     screens/ui_OperatingScreen.c
     screens/ui_FocusScreen.c
     screens/ui_UpdateScreen.c
     screens/ui_ShutdownScreen.c
+    screens/ui_HostActiveScreen.c
+    screens/ui_SlaveActiveScreen.c
     ui.c
     components/ui_comp_hook.c
     ui_helpers.c
-    fonts/ui_font_Chinese.c
+    fonts/ui_font_Chinese_20.c
     INCLUDE_DIRS "."
     REQUIRES lvgl)
