--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,9 +1,10 @@
-idf_component_register(SRCS "main.cpp" "global_message/global_message.c"  "global_message/global_time.c"  "global_message/global_draw.c"  
+idf_component_register(SRCS "main.cpp" "global_message/global_message.c"  "global_message/global_time.c"  "global_message/global_draw.c" "global_message/global_nvs.c" 
                         "elabel_state_machine/ElabelController.cpp"
                         "elabel_state_machine/ChoosingTaskState.cpp"
                         "elabel_state_machine/OperatingTaskState.cpp"
                         "elabel_state_machine/FocusTaskState.cpp"
                         "elabel_state_machine/ActiveState.cpp"
+                        "elabel_state_machine/HostActiveState.cpp"
                         "elabel_state_machine/InitState.cpp"
                         "elabel_state_machine/OTAState.cpp"
                         "battery_manager/battery_manager.cpp"
