--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -7,6 +7,7 @@ idf_component_register(SRCS "main.cpp" "global_message/global_message.c"  "globa
                         "elabel_state_machine/HostActiveState.cpp"
                         "elabel_state_machine/InitState.cpp"
                         "elabel_state_machine/OTAState.cpp"
+                        "elabel_state_machine/SlaveActiveState.cpp"
                         "battery_manager/battery_manager.cpp"
                     INCLUDE_DIRS "global_message" "elabel_state_machine" "battery_manager" "." 
                     REQUIRES esp_adc_cal
