--- a/components/m_esp_now/CMakeLists.txt
+++ b/components/m_esp_now/CMakeLists.txt
@@ -1,4 +1,8 @@
-idf_component_register(SRCS "Esp_now_host.cpp" "Esp_now_slave.cpp" "Esp_now_client.cpp" "../network/network.c" 
-                        INCLUDE_DIRS "include"  "../network/include" 
-                        PRIV_REQUIRES network)
-target_compile_options(${COMPONENT_LIB} PRIVATE -std=gnu++17)
+idf_component_register(SRCS "Esp_now_host.cpp" "Esp_now_slave.cpp" "Esp_now_client.cpp" "../network/network.c" "../m_http/http.c"
+                        INCLUDE_DIRS "include"  "../network/include" "../m_http/include"
+                        REQUIRES network
+                        REQUIRES m_http)
+
+# 只对C++源文件设置编译选项
+set_source_files_properties("Esp_now_host.cpp" "Esp_now_slave.cpp" "Esp_now_client.cpp"
+                          PROPERTIES COMPILE_OPTIONS "-std=gnu++17")
