--- a/components/Codec/CMakeLists.txt
+++ b/components/Codec/CMakeLists.txt
@@ -1,6 +1,6 @@
 idf_component_register(
     SRCS "codec.cpp"
     INCLUDE_DIRS "include"
-    REQUIRES driver esp_codec_dev 
+    REQUIRES driver esp_codec_dev spiffs
 )
 target_compile_options(${COMPONENT_LIB} PRIVATE -std=gnu++17)
