--- a/components/control_driver/CMakeLists.txt
+++ b/components/control_driver/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "control_driver.cpp" "buzzer.cpp"
+idf_component_register(SRCS "callback.cpp" "button.cpp" "encoder.cpp" "control_driver.cpp" "buzzer.cpp"
                     INCLUDE_DIRS "include" 
                     REQUIRES driver)
 target_compile_options(${COMPONENT_LIB} PRIVATE -std=gnu++17)
