--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -11,7 +11,7 @@ idf_component_register(SRCS "main.cpp" "global_message/global_message.c"  "globa
                         "elabel_state_machine/OTAState.cpp"
                         "elabel_state_machine/SlaveActiveState.cpp"
                         "battery_manager/battery_manager.cpp"
-                    INCLUDE_DIRS "global_message" "elabel_state_machine" "battery_manager" "." 
+                    INCLUDE_DIRS "global_message" "elabel_state_machine" "battery_manager" "spiffs_data/include" "." 
                     REQUIRES esp_adc_cal
                     REQUIRES lvgl
                     REQUIRES control_driver
@@ -24,4 +24,3 @@ idf_component_register(SRCS "main.cpp" "global_message/global_message.c"  "globa
                     REQUIRES ui
                     REQUIRES Codec
                     )
-spiffs_create_partition_image(music spiffs_data FLASH_IN_PROJECT)
