--- a/components/m_esp_now/CMakeLists.txt
+++ b/components/m_esp_now/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "Esp_now_host.cpp" "Esp_now_slave.cpp" "Esp_now_client.cpp" "../network/network.c" "../m_http/http.c" "../../main/global_message/global_nvs.c" "../Codec/codec.cpp"
+idf_component_register(SRCS "VoicePacketManager.cpp" "Esp_now_host.cpp" "Esp_now_slave.cpp" "Esp_now_client.cpp" "../network/network.c" "../m_http/http.c" "../../main/global_message/global_nvs.c" "../Codec/codec.cpp"
                         INCLUDE_DIRS "include"  "../network/include" "../m_http/include" "../../main/global_message" "../Codec/include"
                         REQUIRES network
                         REQUIRES m_http
@@ -6,5 +6,5 @@ idf_component_register(SRCS "Esp_now_host.cpp" "Esp_now_slave.cpp" "Esp_now_clie
                         REQUIRES esp-now)
 
 # 只对C++源文件设置编译选项
-set_source_files_properties("Esp_now_host.cpp" "Esp_now_slave.cpp" "Esp_now_client.cpp"
+set_source_files_properties("Esp_now_host.cpp" "Esp_now_slave.cpp" "Esp_now_client.cpp" "VoicePacketManager.cpp"
                           PROPERTIES COMPILE_OPTIONS "-std=gnu++17")
